--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ services:
     build:
       context: .
       dockerfile: ./master/Dockerfile
-    restart: always
     environment:
       POSTGRES_USER: hamed
       POSTGRES_PASSWORD: 123456
@@ -15,16 +14,51 @@ services:
       PG_REP_USER: rep
       PG_REP_PASSWORD: 123456
     volumes:
-      - ./pg_data:/var/lib/postgresql/data
+      #- ./pg_data:/var/lib/postgresql/data
       - ./replicant:/opt/replicant/replicant
+      - ./master/conf.ini:/opt/replicant/replicant/conf.ini
     ports:
     - 80:8080
 
-#  pgadmin:
-#    container_name: pgadmin
-#    image: dpage/pgadmin4
-#    environment:
-#      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-#      PGADMIN_DEFAULT_PASSWORD: P@ssw0rd
-#    ports:
-#    - 80:80
+
+  replica:
+    container_name: replica
+    build:
+      context: .
+      dockerfile: ./replica/Dockerfile
+    environment:
+      POSTGRES_USER: hamed
+      POSTGRES_PASSWORD: 123456
+      POSTGRES_DB: hamed
+      PG_REP_USER: rep
+      PG_REP_PASSWORD: 123456
+      PG_MASTER_HOST: master
+    volumes:
+      #- ./pg_data:/var/lib/postgresql/data
+      #- ./replicant:/opt/replicant/replicant
+      - ./replica/conf.ini:/opt/replicant/replicant/conf.ini
+    depends_on:
+      - master
+    ports:
+      - 8080:8080
+
+  arbiter:
+    container_name: arbiter
+    build:
+      context: .
+      dockerfile: ./replica/Dockerfile
+    environment:
+      POSTGRES_USER: hamed
+      POSTGRES_PASSWORD: 123456
+      POSTGRES_DB: hamed
+      PG_REP_USER: rep
+      PG_REP_PASSWORD: 123456
+      PG_MASTER_HOST: master
+    volumes:
+      #- ./pg_data:/var/lib/postgresql/data
+      #- ./replicant:/opt/replicant/replicant
+      - ./arbiter/conf.ini:/opt/replicant/replicant/conf.ini
+    depends_on:
+      - master
+    ports:
+      - 8070:8080
